--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
     <nav>
+        git mv landing.html index.html
+
         <div class="logo" style="display: flex;align-items: center;">
             <span
                 style="color:gold; font-size:26px; font-weight:bold; letter-spacing: 2px;margin-left: 20px; text-shadow: 2px 2px 1px #6113C3;">NASTY</span>
