--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="kotak">
                     <div class="logo"><img src="../foto/js.png" width="60%"></div>
                     <div class="tulis">
-                        <div class="tulis-1">Java script<div class="tulis-2"
+                        <div class="tulis-1">JS<div class="tulis-2"
                                 style="color: var(--muted);font-size: 1.5rem;">
                                 Dasar</div>
                         </div>
@@ -120,8 +120,7 @@
                 <div class="kotak">
                     <div class="logo"><img src="../foto/ui.jpg" width="60%"></div>
                     <div class="tulis">
-                        <div class="tulis-1">Copy
-                            Paste<div class="tulis-2" style="color: var(--muted);font-size: 1.5rem;">
+                        <div class="tulis-1">Promt<div class="tulis-2" style="color: var(--muted);font-size: 1.5rem;">
                                 Dasar</div>
                         </div>
                     </div>
